--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,8 @@ github_username:  your-github-handle
 show_excerpts: true # set to false to remove excerpts on the homepage
 
 theme: minima
+
+---
+title: "Welcome to my blog"
+date: 2019-02-02
+---
