--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+---
+title: "Welcome to my blog"
+date: 2019-02-02
+---
 title: Great! :thumbs_up:
 author: Vinny Melly Meldrum
 email: your-email@domain.com
